# thundera

./: .dockerignore  .gitignore  README.md  mkdocs.yml  output.json  pyproject.toml  sandbox.py
.devcontainer/: Dockerfile  devcontainer.json
.github/docker/: Dockerfile
.github/workflows/: ci-image-build.yml  docs.yml  python-lint.yml  test.yml
docs/: index.md
docs/examples/: example.ipynb  generate_data.py  generate_metrics.py  metadata.yml
scripts/: gen_ref_nav.py
tests/: test_domains.py  test_metadata.py  test_validators.py
tests/fixtures/data/: domain_contains.json  null_domain.json  range_domain.json  single_domain.json
thundera/: __init__.py  generators.py  metadata.py  metrics.py  validators.py
