[tool.poetry]
name = "thundera"
version = "0.1.0"
description = "Data quality library"
authors = ["Henrique Magalhães Soares <hemagso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.1"
pydantic = "^2.7.0"
pytest-cov = "^5.0.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
