[tool.poetry]
name = "thundera"
version = "0.1.0"
description = "Data quality library"
authors = ["Henrique Magalhães Soares <hemagso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.1"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
isort = "^5.13.2"
black = "^24.4.0"
flake8-bugbear = "^24.2.6"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 80
extend-select = "B950"
extend-ignore = "E203,E501,E701"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
